--- a/index.html
+++ b/index.html
@@ -7,38 +7,42 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <header class="p-3 mb-3 border-bottom">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+  <header class="p-3 mb-3 border-bottom">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-between justify-content-lg-center">
 
-                <span class="fs-4 fw-bold me-auto">LUCAS CORTIZO CARVALHO</span> 
+            <span class="fs-4 fw-bold me-auto">LUCAS CORTIZO CARVALHO</span> 
 
-   
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="index.html" class="nav-link px-2 link-body-emphasis">Home</a></li>
-                    <li><a href="sobre.html" class="nav-link px-2 link-body-emphasis">Sobre mim</a></li>
-                    <li><a href="portfolio.html" class="nav-link px-2 link-body-emphasis">Portfólio</a></li>
-                    <li><a href="cards.html" class="nav-link px-2 link-body-emphasis">Cartões</a></li>
-                </ul>
+            <ul class="nav col-12 col-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="index.html" class="nav-link px-2 link-body-emphasis">Home</a></li>
+                <li><a href="sobre.html" class="nav-link px-2 link-body-emphasis">Sobre mim</a></li>
+                <li><a href="portfolio.html" class="nav-link px-2 link-body-emphasis">Portfólio</a></li>
+            </ul>
 
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                    <input type="search" class="form-control" placeholder="Buscar..." aria-label="Search">
-                </form>
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                <input type="search" class="form-control" placeholder="Buscar..." aria-label="Search">
+            </form>
 
-            </div>
         </div>
-    </header>
+    </div>
+</header>
 
-    <div class="container col-xxl-8 px-4 py-5">
+
+    <div class="container">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6">
             <img src="pesca.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
           </div>
           <div class="col-lg-6">
-            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Lucas Cortizo - Desenvolvedor Web</h1>
-            <p class="lead">Desenvolvedor web com expertise em JavaScript, React, Node.js, e outras tecnologias modernas. Apaixonado por criar experiências digitais eficientes e de alta qualidade. Estou sempre em busca de novos desafios para crescer e contribuir em equipes criativas e inovadoras.</p>            
-              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-              <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 ">Lucas Cortizo - Desenvolvedor Web</h1>
+            <p class="lead">Sou estudante de Engenharia de Software na FIAP, atualmente no segundo semestre, com interesse em diversas áreas da tecnologia, incluindo desenvolvimento web. Ao longo do meu curso, tenho explorado tecnologias como JavaScript, Python, HTML, CSS e C++, e estou sempre buscando novas oportunidades para aprender e crescer profissionalmente. Meu foco está em aplicar os conhecimentos adquiridos em projetos práticos e contribuir para soluções inovadoras.</p>            
+              <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
+                <a href="portfolio.html" class="text-decoration-none text-reset" target="_blank">Ver Portfólio</a>
+              </button>
+              <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+                <a href="https://github.com/Lucascortizo" class="text-decoration-none text-reset" target="_blank">GitHub</a>
+              </button>
+              
             </div>
           </div>
         </div>
