--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-  <header class="p-3 mb-3 border-bottom">
+  <header class="p-3 mb-3 bg-primary-subtle border-bottom">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-between justify-content-lg-center">
 
@@ -15,7 +15,7 @@
 
             <ul class="nav col-12 col-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="index.html" class="nav-link px-2 link-body-emphasis">Home</a></li>
-                <li><a href="sobre.html" class="nav-link px-2 link-body-emphasis">Sobre mim</a></li>
+                <li><a href="sobre.html" class="nav-link px-2 link-body-emphasis">Sobre</a></li>
                 <li><a href="portfolio.html" class="nav-link px-2 link-body-emphasis">Portfólio</a></li>
             </ul>
 
@@ -33,7 +33,7 @@
           <div class="col-10 col-sm-8 col-lg-6">
             <img src="pesca.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 border border-2 rounded-3 mb-4 p-4">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 ">Lucas Cortizo - Desenvolvedor Web</h1>
             <p class="lead">Sou estudante de Engenharia de Software na FIAP, atualmente no segundo semestre, com interesse em diversas áreas da tecnologia, incluindo desenvolvimento web. Ao longo do meu curso, tenho explorado tecnologias como JavaScript, Python, HTML, CSS e C++, e estou sempre buscando novas oportunidades para aprender e crescer profissionalmente. Meu foco está em aplicar os conhecimentos adquiridos em projetos práticos e contribuir para soluções inovadoras.</p>            
               <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
