Correção de erros

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
           <div class="col-lg-6 border border-2 rounded-3 mb-4 p-4">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 ">Lucas Cortizo - Desenvolvedor Web</h1>
-            <p class="lead">Sou estudante de Engenharia de Software na FIAP, atualmente no segundo semestre, com interesse em diversas áreas da tecnologia, incluindo desenvolvimento web. Ao longo do meu curso, tenho explorado tecnologias como JavaScript, Python, HTML, CSS e C++, e estou sempre buscando novas oportunidades para aprender e crescer profissionalmente. Meu foco está em aplicar os conhecimentos adquiridos em projetos práticos e contribuir para soluções inovadoras.</p>            
+            <p class="lead">Sou estudante de Engenharia de Software na Faculdade de Informática e Administração Paulista (FIAP), atualmente no segundo semestre, com interesse em diversas áreas da tecnologia, incluindo desenvolvimento web. Ao longo do meu curso, tenho explorado tecnologias como JavaScript, Python, HTML, CSS e C++, e estou sempre buscando novas oportunidades para aprender e crescer profissionalmente. Meu foco está em aplicar os conhecimentos adquiridos em projetos práticos e contribuir para soluções inovadoras.</p>            
               <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
                 <a href="portfolio.html" class="text-decoration-none text-reset" target="_blank">Ver Portfólio</a>
               </button>
