--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     </header>
     <div class="container border border-2 rounded-3 mb-4 p-4 text-center">
         <h1>Portfólio</h1>
-        <p class="lead mb-3">"Aqui estão alguns dos projetos que desenvolvi durante minha jornada na área de tecnologia. Cada um deles foi criado com o objetivo de solucionar problemas práticos, explorar novas tecnologias e aprimorar minhas habilidades de desenvolvimento."</p>
+        <p class="lead mb-3">Aqui estão alguns dos projetos que desenvolvi no primeiro semestre do curso. Cada um deles foi criado com o objetivo de solucionar problemas práticos, explorar novas tecnologias e aprimorar minhas habilidades de desenvolvimento."</p>
     </div>
     <div class="album py-5 bg-body-tertiary">
         <div class="container">
